[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "imsg-codex"
version = "0.1.0"
requires-python = ">=3.14,<3.15"
dependencies = [
    "concurrent-log-handler>=0.9.28",
    "openai-codex-sdk>=0.1.0",
    "requests",
    "python-telegram"
]

[dependency-groups]
dev = [
    "mypy>=1.18.0",
    "pre-commit>=4.2.0",
    "pytest>=8.0.0",
    "ruff>=0.11.0",
    "types-requests>=2.32.0.20250328",
]

[project.scripts]
imsg-codex = "imsg_codex.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/imsg_codex"]

[tool.ruff]
target-version = "py314"
line-length = 88
src = ["src", "test"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4", "SIM", "RUF"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.14"
files = ["src", "test"]
mypy_path = ["src"]
namespace_packages = true
explicit_package_bases = true
pretty = true
show_error_codes = true
warn_unused_configs = true
check_untyped_defs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = ["openai_codex_sdk"]
ignore_missing_imports = true
